--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc --watch",
-    "server": "tsc && nodemon dist/server.js"
+    "server": "tsc && nodemon dist/server.js",
+    "test": "vitest --reporter verbose --dom"
   },
   "author": "Joao Oliveira",
   "license": "ISC",
@@ -14,6 +15,10 @@
     "@types/node": "^20.12.11",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^2.1.4"
+  },
+  "devDependencies": {
+    "happy-dom": "^15.10.0"
   }
 }
